--- a/doc/install/install.tex
+++ b/doc/install/install.tex
@@ -12,7 +12,10 @@
 % REVISION HISTORY:
 %
 % $Log$
-% Revision 1.8  1995-11-01 22:13:37  jyelon
+% Revision 1.9  1995-11-17 17:19:37  brunner
+% Incorporated proofreading comments from 11-16 afternoon
+%
+% Revision 1.8  1995/11/01  22:13:37  jyelon
 % *** empty log message ***
 %
 % Revision 1.7  1995/11/01  22:06:30  jyelon
@@ -50,8 +53,8 @@ Our explanation of the installation process will assume that {\tt
 if not, you must mentally translate.
 
 Download the tar-file file appropriate to your machine.  For example,
-if you are installing the version of charm for networks of solaris
-machines, download {\tt net-sun.tar.Z}:
+if you are installing the version of charm for networks of Sun
+workstations running SunOS 4.X, download {\tt net-sun.tar.Z}:
 
 \begin{verbatim}
     % ftp a.cs.uiuc.edu
@@ -134,7 +137,7 @@ of the networked versions, all other users may skip it.
 The network versions utilize many unix processes communicating with
 each other via UDP.  No attempt is currently being made to filter out
 unauthorized packets.  Therefore, it is theoretically possible to
-mount a security attack by sending UDP packets to a executing
+mount a security attack by sending UDP packets to an executing
 converse, charm, or charm++ program's sockets.
 
 The second security issue associated with networked programs is
@@ -171,12 +174,11 @@ notification code:
     % cp conv-host.silent conv-host
 \end{verbatim}
 
-Note: even though the other versions contain programs named {\tt
-conv-host.notify} and\linebreak
-{\tt conv-host.silent}, they never actually
-notify us.  The existence of the extra files is just to make our
-compilation scripts more consistent across versions.  The {\em only}
-versions that ever notify us are the network versions.
+Although versions for some other machines (eg. ncube) contain
+programs named {\tt conv-host.notify} and {\tt conv-host.silent}, they
+never actually notify us.  The existence of the extra files is just to
+make our compilation scripts more consistent across versions.  The
+{\em only} versions that ever notify us are the network versions.
 
 \subsection{Reducing disk usage}
 
