Added CPM section

--- a/doc/converse/manual.tex
+++ b/doc/converse/manual.tex
@@ -1,4 +1,4 @@
-\documentstyle[11pt,epsf]{report}
+\documentstyle[psfig,11pt,epsf]{report}
 \setcounter{topnumber}{2}
 \def\topfraction{1}
 \setcounter{bottomnumber}{1}
@@ -7,7 +7,7 @@
 \def\textfraction{0.2}
 \def\floatpagefraction{0.8}
  
-\setlength{\parindent}{0.4in}
+\setlength{\parindent}{0.0in}
 \setlength{\parskip}{0.1in}
 \setlength{\textwidth}{6.5in}
 \setlength{\itemindent}{1in}
@@ -28,7 +28,6 @@
 \newcommand{\mycomment}[1]{} 
 \basea
  
-\input{psfig}
 \textwidth 6.4in
 \textheight 8.9in
 \topmargin -.4in
@@ -78,6 +77,7 @@ for languages that support threads and tag-based message retrieval.
 \input{threads}
 %\input{thsync}
 \input{cpvmacros}
+\input{cpm}
 %\input{ldb}
 \input{index}
 
