--- a/doc/converse/manual.tex
+++ b/doc/converse/manual.tex
@@ -78,7 +78,7 @@ for languages that support threads and tag-based message retrieval.
 %\input{thsync}
 \input{cpvmacros}
 \input{cpm}
-%\input{ldb}
+\input{ldb}
 \input{index}
 
 \end{document}
