--- a/doc/install/manual.tex
+++ b/doc/install/manual.tex
@@ -12,7 +12,10 @@
 % REVISION HISTORY:
 %
 % $Log$
-% Revision 1.3  1995-11-17 17:48:18  brunner
+% Revision 1.4  1996-10-01 18:19:51  milind
+% Added a word , various..
+%
+% Revision 1.3  1995/11/17 17:48:18  brunner
 % New title page, but I can't get rid of page number
 %
 % Revision 1.2  1995/11/01  20:02:08  milind
@@ -72,7 +75,7 @@ Charm/Charm++/Converse Installation and Usage
 \section{Introduction}
 In this manual, we describe how to install Charm, Charm++ and
 Converse, how to compile and execute programs, and the available
-command line options.  We also describe queueing and load balancing
+command line options.  We also describe various queueing and load balancing
 strategies, and the various modes of execution of Charm and Charm++ programs.
 
 \include{install}
